--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <span class="common header"><h1>Home Page</h1></span>
     
     <!-- links -->
-    <Span Class="common leftmenu"><a href="Pages/MyPage.html" target="_self" title="go to my page" id="top1"><h4>My Page</h4></a>
+    <Span Class="common leftmenu"><a href="pages/MyPage.html" target="_self" title="go to my page" id="top1"><h4>My Page</h4></a>
        
         <a href="#" target="_self" title="go to home page"><h4>Home</h4></a> </Span>
 
